# EclipseEngine

./: .gitignore  .gitmodules  CMakeLists.txt  DoxyFile  EclipseEngine.sln  README.md  Shaders.toml
.cache/clangd/index/: Assert.hpp.C742273CBAE4C7F2.idx  Memory.hpp.91A5C91124B1AD45.idx  Runtime.cpp.768B40C4131A6592.idx  SDL.c.7FEBE5FE756DCCCC.idx  SDL.h.0DEF9267D7416BFB.idx  SDL_BApp.h.7C5ADB4CD93BE7CE.idx  SDL_BWin.h.964EFC9364AA5955.idx  SDL_BeApp.cc.FC4ACFF1885BC76A.idx  SDL_BeApp.h.2386DF493BDBC53F.idx  SDL_RLEaccel.c.5A11FB8B88ED8519.idx  SDL_RLEaccel_c.h.A8492596C94177F6.idx  SDL_aaudio.c.0BBF6C2D15F05E4B.idx  SDL_alsa_audio.c.209CAB4E7A024CB5.idx  SDL_android.c.28D6F522D75D94F5.idx  SDL_android.h.67FB5D219D3419E9.idx  SDL_androidclipboard.c.84C380B16F2A0B9C.idx  SDL_androiddialog.c.658C67EDAC1F800C.idx  SDL_androidevents.c.F4C525C4CD5751CB.idx  SDL_androidgl.c.E5AB87405EB2EF58.idx  SDL_androidkeyboard.c.424DE46F79369376.idx  SDL_androidmessagebox.c.CC14C5CC18C2DB7C.idx  SDL_androidmouse.c.40D7C06DBC820E93.idx  SDL_androidpen.c.7EAB3709155F7E87.idx  SDL_androidsensor.c.E60030A4A67DF9F6.idx  SDL_androidtouch.c.7C7D89A9EFA075FE.idx  SDL_androidvideo.c.05DB159DDC8C792E.idx  SDL_androidvulkan.c.3598838EBD7F2C0A.idx  SDL_androidwindow.c.2CDEC33DA0BA3A7E.idx  SDL_appid.c.E7903F4A2B413B4D.idx  SDL_appid.h.1360F21B2C159907.idx  SDL_assert.c.E6F4F17506E6FF7B.idx  SDL_assert.h.F616275572351670.idx  SDL_assert_c.h.4AA5CAFC4C79795F.idx  SDL_asyncio.c.3B7321335629D621.idx  SDL_asyncio.h.82DC76F7E0AB9CBD.idx  SDL_asyncio_c.h.3D62117DAA3ABC2A.idx  SDL_asyncio_generic.c.CC024A0BEEB85F00.idx  SDL_asyncio_liburing.c.874580FAB5AE0A25.idx  SDL_asyncio_windows_ioring.c.E1A2AC156EA62D8A.idx  SDL_atomic.c.4A3A0EA75820D6EE.idx  (+1042 more)
Engine/: Engine.cpp  Engine.vcxproj  Engine.vcxproj.filters
Engine/Common/: Assert.hpp  Event.hpp  EventPool.cpp  EventPool.hpp  Logger.hpp  Memory.cpp  Memory.hpp  Time.cpp  Time.hpp  Types.hpp
Engine/Core/: Debug.h  Error.hpp  EventManager.cpp  EventManager.hpp  Events.h  FileSystem.c  FileSystem.cpp  FileSystem.h  FileSystem.hpp  JobSystem.hpp  Memory.c  Memory.h  Time.c  Time.h  Types.h  Types.hpp  VirtualFS.cpp  VirtualFS.hpp  Window.cpp  Window.hpp
Engine/Graphics/: RenderDevice.cpp  RenderDevice.hpp  Server.cpp  Server.hpp  ShaderManager.cpp  ShaderManager.hpp
Engine/Graphics/Driver/GL/: Driver.cpp  Driver.hpp
Engine/Renderer/: Renderer.c  Renderer.h
Engine/Renderer/GL/: CMakeLists.txt
Engine/Renderer/GL/Driver/: RenderDevice.c  RenderDevice.h
Engine/Renderer/GL/glad/: glad.c
Engine/Renderer/GL/glad/include/glad/: glad.h
Engine/Runtime/: Runtime.c  Runtime.cpp
Engine/Scripting/: Scripting.c  Scripting.h
Engine/Scripts/: main.lua
Engine/Scripts/Engine/: Engine.lua  Renderer.lua  Window.lua
Engine/Shaders/: Default.frag.hlsl  Default.vert.hlsl  Shader.c  Shader.h
Engine/Shaders/Cache/: triangle.asm  triangle.vert
Engine/Shaders/Compiled/: Default.f.spv  Default.v.spv
Engine/Shaders/Source/: triangle.vert
Engine/System/: Window.c  Window.h
Engine/Window/: Window.cpp  Window.hpp
Resources/: Resources.epak
Runtime/: Runtime.cpp  Runtime.vcxproj
include/glad/glad/: glad.h
src/: test.cpp
src/core/: io.cpp  io.hpp  memory.cpp  memory.hpp  time.cpp  time.hpp  types.hpp
src/graphics/: glad.c  renderer.cpp  renderer.hpp
src/platform/: linux_window.cpp  win32_window.cpp  window.cpp  window.hpp
